# forum

./: config.yaml  login.db  main.py  pyproject.toml  readme.md  reset.py
extra/install/: main.yx  update.py
extra/install/docs/: README.md
extra/install/framework/: yx.py
extra/load/: load.py
extra/reports/: report.py  reports.csv
extra/ytools/: log.yxl  ytools.py
static/: query.js  report.js  scripts.js  style.css  thread.css  thread.js
templates/: 404.html  base.html  cpemail.html  cpost.html  email.html  home.html  index.html  login.html  privacy.html  profile.html  query.html  reg.html  reset.html  settings.html  shop.html  terms.html  thread.html
