[tool.poetry]
name = "repl_python3_forum-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
replit = "^3.2.4"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"
WTForms = "^3.0.0"
email-validator = "^1.1.3"
Flask-Bootstrap4 = "^4.0.2"
Flask-Mail = "^0.9.1"
Flask-Admin = "^1.5.8"
PyYAML = "^6.0"
flask-talisman = "^0.8.1"
Flask-SeaSurf = "^0.3.1"
waitress = "^2.0.0"
Flask-Migrate = "^3.1.0"
oauthlib = "^3.1.1"
Flask-Caching = "^1.10.1"
Flask-Limiter = "^2.0.2"
Flask-Compress = "^1.10.1"
Flask-gzip = "^0.2"
sly = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
